fix some layout issues on landingPage

--- a/src/app/componentes/footer/footer.component.css
+++ b/src/app/componentes/footer/footer.component.css
@@ -67,3 +67,24 @@
     padding: 2rem 0;
     text-align: right;
 }
+
+@media(max-width: 768px) {
+    .footer-content{
+        grid-template-columns: 1fr 1fr;
+        grid-row-gap: 2rem;
+    }
+    .footer-logo-socials{
+        flex-wrap: wrap;
+        margin: auto;
+    }
+    .footer-logo-socials div{
+        flex-grow: 1;
+    }
+}
+
+@media(max-width: 480px) {
+    .footer-content{
+        grid-template-columns: 1fr;
+        margin: auto;
+    }
+}
